// Copyright 2021 Datafuse Labs
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package meta;

message KVMeta {
  // Expiration time in **seconds or milliseconds** since Unix epoch (1970-01-01).
  //
  // The interpretation depends on the magnitude of the value:
  // - Values > `1_000_000_000_000`: treated as milliseconds since epoch
  // - Values ≤ `1_000_000_000_000`: treated as seconds since epoch
  optional uint64 expire_at = 1;
}

message SeqV {
  uint64 seq = 1;
  bytes data = 2;
  optional KVMeta meta = 3;
}

// Request to get the seq and value by key
message TxnGetRequest {
  string key = 1;
}

message TxnGetResponse {
  string key = 1;

  optional SeqV value = 2;
}

// Return the value by key, then add the delta to the key.
//
// This operation assume the value bytes is a json encoded `uint64`,
// e.g. `1025` in bytes is `b"1025"`.
// If the result is negative, it will be set to zero.
message FetchAddU64 {

  // The key to fetch and add the delta.
  string key = 1;

  // Assert the seq number of the record before update.
  // - If it does not match, no update will be made and the record seq number won't change.
  // - If it is None, the update will always be made.
  optional uint64 match_seq = 3;

  // The delta to add to the value.
  int64 delta = 2;
}

// Response for FetchAddU64, contains the value before and after `add`
message FetchAddU64Response {

  string key = 1;

  // The seq number of the record before update. `0` if the key does not exist.
  uint64 before_seq = 2;

  // The value before update.
  uint64 before = 3;

  // The seq number of the record after update. It should always be greater than `before_seq`.
  uint64 after_seq = 4;

  // The value after update.
  uint64 after = 5;
}

// Request to put a value with an auto-generated sequential key.
//
// This operation appends a sequence number to the given prefix to create a unique key,
// then stores the value under that key. The sequence number is maintained using a
// separate sequence key and is guaranteed to be monotonically increasing.
message PutSequential {
  // Key prefix for sequential put operation.
  //
  // A sequence number will be appended to the prefix to form the final key.
  // The sequence number is u64 encoded as a 21-digit zero-padded string with underscores
  // every 3 digits for readability(u64 max is 20 digits).
  // The total length of the encoded sequence number is 21 digit + 6 `_` = 27 chars.
  //
  // Examples:
  // - `/foo/bar/` → `/foo/bar/000_000_000_000_001_200_123`
  // - `/foo/bar_` → `/foo/bar_000_000_000_000_001_200_123`
  string prefix = 1;

  // Key used to generate sequence numbers.
  //
  // Example: `/__seq`
  //
  // The sequence value must be a JSON-encoded uint64 (e.g., `1025` as `b"1025"`),
  // compatible with FetchAddU64 operation.
  // Because internally, the sequence number is built with `FetchAddU64(1)`.
  //
  // User responsibility: ensure sequence key validity. If removed and re-added,
  // the sequence number will reset.
  string sequence_key = 2;

  // The value to put.
  bytes value = 3;

  // Absolute expire time in milliseconds since epoch, specified by the client
  optional uint64 expires_at_ms = 4;

  // Time to live in milliseconds (relative expire time since raft-log proposal, the time on raft-leader).
  // If set, `expires_at_ms` is ignored.
  optional uint64 ttl_ms = 5;
}

// Put request and response
message TxnPutRequest {
  string key = 1;

  bytes value = 2;

  // Whether or not to return the prev value
  // Not used anymore
  bool prev_value = 3;

  // Absolute expire time in seconds or milliseconds since Unix epoch (1970-01-01).
  optional uint64 expire_at = 4;

  // Time to last in milliseconds.
  //
  // TTL is the relative expire time, since the raft-log proposed.
  // If `ttl_ms` is set, `expire_at` is ignored.
  optional uint64 ttl_ms = 5;
}

message TxnPutResponse {
  string key = 1;

  // The value before put
  optional SeqV prev_value = 2;

  // The value after put
  optional SeqV current = 3;
}

// Delete request and response
message TxnDeleteRequest {
  string key = 1;

  // if or not return the prev value
  // Not used anymore
  bool prev_value = 2;

  // Delete only if the `seq` matches the specified value.
  // Such a condition skips changed record and does not result in a transaction failure.
  //
  // A key use case for this feature is to support `truncate-table`: the
  // deletion of only non-modified files from a snapshot view of copied
  // files.
  //
  // A table contains associated `copied-files`. Suppose Process 1 updates
  // the table by modifying `f-3`, removing `f-4`, and adding `f-7`. In this
  // case, Process 2 can delete only the non-modified files:
  //
  // ```
  // Process 1                       Process 2
  // // Add copied files             // Attempt to delete copied files
  // -------------------------------------------------------------
  // // 1. Initial
  // Table-A(seq:1):
  //     f-2(seq:2)
  //     f-3(seq:3)
  //     f-4(seq:4)
  //                                 // 2. Acquire a snapshot view
  //                                 Table-A(seq:1):
  //                                     f-2(seq:2)
  //                                     f-3(seq:3)
  //                                     f-4(seq:4)
  //
  // // 3. Modify table and files
  // Table-A(seq:7):
  //     f-2(seq:2)
  //     f-3(seq:5) // updated
  //                // removed f-4
  //     f-7(seq:6) // added
  //
  //                                 // 4. Sequence of table changed from 1 to 7
  //                                 //    Fetch table again
  //                                 Table-A(seq:7):
  //
  //
  //                                 // 5. Remove only unmodified file
  //                                 Table-A(seq:8):
  //                                                 // f-2 is the only file deleted
  //                                     f-3(seq:5)  // sequence number updated
  //                                     f-7(seq:6)  // sequence number updated
  // ```
  optional uint64 match_seq = 3;
}

message TxnDeleteResponse {
  string key = 1;
  bool success = 2;
  optional SeqV prev_value = 3;
}

// Delete by prefix request and response
message TxnDeleteByPrefixRequest {string prefix = 1;}

message TxnDeleteByPrefixResponse {
  string prefix = 1;
  uint32 count = 2;
}
